# open_mp_lab1

./: CMakeLists.txt  main.cpp
